Correct alignment within time-range popover toggle

--- a/projects/extra-clarity/time-range-filter-toggle/src/time-range-filter-toggle.component.scss
+++ b/projects/extra-clarity/time-range-filter-toggle/src/time-range-filter-toggle.component.scss
@@ -1,3 +1,5 @@
-.toggle-calendar-icon {
-  margin-right: 0.2rem;
+.popover-toggle-label {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
 }
